--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -10,7 +10,6 @@ header {
 }
 
 a {
-    list-style-type: none;
     text-decoration: underline;
     color: #99CCFF;
 }
@@ -19,3 +18,6 @@ a:hover {
     color: #9999FF   
 }
 
+.ol1 {
+     list-style-type: none;
+}
